<resources>
    <string name="app_name">WiKuote</string>

    <!-- Drawer -->
    <string name="tab_explore">Explore</string>
    <string name="tab_search_page">Search page</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_add_page">Add page</string>
    <string name="tab_quote_of_the_day">Quote of the day</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_manage_categories">Organize categories</string>
    <string name="drawer_categories">Categories</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Actions -->
    <string name="action_saved_favorite">Add to favorites</string>
    <string name="action_deleted_favorite">Removed from favorites</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_delete_page">Delete page</string>
    <string name="action_save_page">Save page</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_webview">View web page</string>
    <string name="desc_selected_singular">quote selected</string>
    <string name="desc_selected_plural">quotes selected</string>

    <!-- Preferences -->
    <string name="pref_notification_category">Notification</string>
    <string name="pref_notification_switch">"Quote of the day" notification</string>
    <string name="key_notification_active">notification_active</string>

    <!-- Tips -->
    <string name="tip_swipe">Swipe to explore!</string>

    <!-- Messages -->
    <string name="msg_empty_categories">Nothing here... Yet!</string>
    <string name="hint_explore">Swipe to explore!</string>

    <!-- Dialog messages -->
    <string name="title_select_category">Select category</string>
    <string name="title_share_quote">Share using</string>
    <string name="msg_search_request">Insert page title</string>
    <string name="msg_rename_request">Insert new category title</string>
    <string name="msg_add">Add</string>
    <string name="msg_new_category">New category</string>
    <string name="msg_rename">Rename</string>
    <string name="err_invalid_input">Invalid input</string>
    <string name="err_existing_page">The page already exists!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_search">Search</string>
    <string name="btn_ok">Ok</string>

    <!-- Configuration messages -->
    <string name="loading">Loading...</string>
    <string name="loading_quote">Loading quotes...</string>
    <string name="loading_page">Exploring...</string>
    <string name="msg_initializing">Initializing...</string>

    <!-- Fetch quote messages -->
    <string name="msg_fetch_success">The quote has been retrieved successfully!</string>
    <string name="err_generic">Oops... Something went wrong!</string>
    <string name="err_missing_author">The requested page doesn\'t exists</string>
    <string name="err_network">Unable to reach the service!\nCheck your connection and retry</string>
    <string name="err_parser">Unable to extract quotes from this page</string>

    <!-- DB messages -->
    <string name="msg_page_deleted">Page successfully deleted!</string>

    <!-- Model -->
    <string name="uncategorized">Uncategorized</string>

</resources>
